--- a/locales/languages.json
+++ b/locales/languages.json
@@ -24,7 +24,7 @@
 		"img/img_main_en.png"
 	],
 	"main2": [
-		"Депозит в долларах от 30% годовых. Личный опыт. Факты.",
+		"Депозит в долларах от 30 до 70% годовых. Личный опыт. Факты.",
 		"All hot items in your mobile phone!"
 	],
 	"main3": [
@@ -182,7 +182,7 @@
 		"For making sure of the functionality of the service it is possible to try it for free for 5 days."
 	],
 	"investor": [
-		"Связаться со мной",
+		"Перейти на сайт",
 		"For investors"
 	],
 	"footer": [
